# KGit

./: CMakeLists.txt  KGit.cpp  KGit.h  README.md  main.cpp
